# corphish

./: .gitignore  BOOTSTRAP.md  CLAUDE.md  HEARTBEAT.md  IDENTITY.md  README.md  install.sh  pyproject.toml  update.sh
corphish/: __init__.py  __main__.py  auth.py  bootstrap.py  chat.py  claude_client.py  cli.py  config.py  daemon.py  db.py
tests/: test_auth.py  test_bootstrap.py  test_chat.py  test_claude_client.py  test_cli.py  test_config.py  test_daemon.py  test_db.py  test_main.py  test_version.py
