[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corphish"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.120.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "anthropic>=0.26.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
corphish = "corphish.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
